Porting codice per Java6 per Mac OS X 10.6